--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
       - name: Build AAB and APK with Gradle
-        run: ./gradlew --refresh-dependencies assembleRelease
+        run: run: ./gradlew --refresh-dependencies assembleRelease -Psigning.storeFile=/tmp/keystore.jks -Psigning.keyAlias=${{ secrets.KEY_ALIAS }} -Psigning.storePassword=${{ secrets.KEYSTORE_PASSWORD }} -Psigning.keyPassword=${{ secrets.KEY_PASSWORD }}
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
