--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: "21"
-          distribution: "adopt"
+          distribution: "temurin"
 
       - name: Cache Gradle Wrapper and Dependencies
         uses: actions/cache@v3
