--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 21
+      - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: "21"
-          distribution: "temurin"
+          java-version: "8"
+          distribution: "adopt"
 
       - name: Cache Gradle Wrapper and Dependencies
         uses: actions/cache@v3
@@ -39,7 +39,7 @@ jobs:
 
       - name: Set up local.properties
         run: |
-          echo -e 'signing.storeFilePath=/tmp/keystore\nsigning.keyPassword=${{ secrets.KEYSTORE_PASSWORD }}\nsigning.storePassword=${{ secrets.KEYSTORE_PASSWORD }}\nsigning.keyAlias=android' > local.properties
+          echo "${{ secrets.KEYSTORE_FILE }}" | base64 -d > /tmp/keystore.jks
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
